kubernetes.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
    name: bingo
    annotations:
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.entrypoints: websecure

spec:
    ingressClassName: traefik
    rules:
      - host: bingo.valdum.dev
        http:
            paths:
              - path: /
                pathType: Prefix
                backend:
                    service:
                        name: bingo
                        port:
                            name: http-out

---
apiVersion: v1
kind: Service

metadata:
    name: bingo

spec:
    type: ClusterIP
    selector:
        app: bingo
    sessionAffinity: None
    ports:
      - name: http-out
        protocol: TCP
        port: 80
        targetPort: http-in

---
apiVersion: apps/v1
kind: Deployment

metadata:
    name: bingo

spec:
    replicas: 1
    minReadySeconds: 15
    revisionHistoryLimit: 1

    strategy:
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 0

    selector:
        matchLabels:
            app: bingo

    template:
        metadata:
            labels:
                app: bingo

        spec:
            containers:
              - name: bingo
                image: ghcr.io/v4ldum/bingo:latest
                imagePullPolicy: Always

                ports:
                  - name: http-in
                    containerPort: 8080

                startupProbe:
                    periodSeconds: 1
                    failureThreshold: 10
                    httpGet:
                        path: /
                        port: http-in
                readinessProbe:
                    timeoutSeconds: 3
                    httpGet:
                        path: /
                        port: http-in

                volumeMounts:
                  - name: config
                    mountPath: /etc/nginx/conf.d/
                    readOnly: true

            volumes:
              - name: config
                configMap:
                    name: bingo-nginx-config
